Added Angular 1 Calculator and Fixed the GitHub Api
I also added a few home page components and added a few pages. I adjusted the NavBar and fixed some of the routes. I also added a Transparent Nav that changes class once you scroll.

--- a/Angular-GitHubApi-Portfolio/src/app/modules/contact/pages/contact/contact.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/contact/pages/contact/contact.component.html
@@ -1,1 +1,15 @@
-<p>contact works!</p>
+<main id="contact_us" class="fluid-container">
+    <section id="hero_slider" class="w-100">
+        <article>
+            <app-contactus-header></app-contactus-header>
+        </article>
+    </section>
+    <section id="rafael_intro" class="container">
+        <article class="col-12 pt-3">
+            <p>Contact Us Stuff here</p>
+        </article>
+    </section>
+    <section id="services" class="container-fluid bg-dark">
+
+    </section>
+</main>
