--- a/Angular-GitHubApi-Portfolio/src/app/core/footer/footer.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/core/footer/footer.component.html
@@ -1,1 +1,31 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="container-fluid bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h4 class="color5"><strong>Rafael Torres' Portfolio</strong>
+                </h4>
+                <ul class="list-unstyled text-white">
+                    <li> <a href="tel:8053205811" class="text-white"><i class="fa fa-phone fa-fw"></i> (805) 320-5811</a></li>
+                    <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:rtj113@gmail.com" class="text-white">rtj113@gmail.com</a>
+                    </li>
+                </ul>
+                <br>
+                <ul class="list-inline row mx-auto" style="max-width:500px;">
+                    <li class="col-4">
+                        <a href="https://github.com/rtj113" target="_blank"><i class="fa fa-github fa-fw fa-3x text-white"></i></a>
+                    </li>
+                    <li class="col-4">
+                        <a href="https://www.linkedin.com/in/rtj113" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x text-white"></i></a>
+                    </li>
+                    <li class="col-4">
+                        <a href="https://plus.google.com/u/0/116726665874714937707" target="_blank"><i class="fa fa-google fa-fw fa-3x text-white"></i></a>
+                    </li>
+                </ul>
+                <hr class="small">
+                <p class="text-white">Copyright &copy; Rafael Torres' Portfolio 2017</p>
+            </div>
+        </div>
+    </div>
+    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+</footer>
