--- a/Angular-GitHubApi-Portfolio/src/styles.css
+++ b/Angular-GitHubApi-Portfolio/src/styles.css
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-family: Helvetica, Arial, sans-serif;
+}
+body {
+    margin: -56px auto;
+}
+#socialMedia {
+    padding: 5px;
+    transition: transform .2s; /* Animation */
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+}
+.zoom {
+    width:500px;
+    transform: scale(1.5);
+}
+.bg-tictac {
+    background-image: url('./assets/media/images/tic-tac-toe.png');
+}
+.bg-connect {
+    background-image: url('./assets/media/images/connectwork.png');
+}
+.bg-qbkls {
+    background-image: url('./assets/media/images/qbkls.png');
+}
+.bg-hex-dark {
+    background-image: url('./assets/media/images/hex-dark.png');
+}
+.card {
+    min-height: 262px;
+}
