Footer adjustments made and Contact Header Adjusted

--- a/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
@@ -13,16 +13,19 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="calculator" routerLinkActive="active">Angular 1 Calculator</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item">
+            <a class="nav-link" routerLink="contact" routerLinkActive="active">Contact Me</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Porfolio
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> -->
             <!-- <a class="dropdown-item" href="#">Another action</a> -->
-            <div class="dropdown-divider"></div>
+            <!-- <div class="dropdown-divider"></div>
             <a class="dropdown-item" routerLink="contact" routerLinkActive="active">Contact Me</a>
           </div>
-        </li>
+        </li> -->
         <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li> -->
