--- a/Angular-GitHubApi-Portfolio/src/app/modules/contact/components/contactus-header/contactus-header.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/contact/components/contactus-header/contactus-header.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="carousel-item active bgImage2">
             <div class="carousel-caption d-none d-md-block">
-            <h1 class="deepshadow">Contact Me</h1>
+            <h1 class="display-4">Contact Me</h1>
             </div>
         </div>
         </div>
