--- a/Angular-GitHubApi-Portfolio/src/app/modules/home/component/home-hero-slider/home-hero-slider.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/home/component/home-hero-slider/home-hero-slider.component.html
@@ -11,8 +11,8 @@
         <div class="carousel-item bgImage1 active">
           <div class="carousel-caption d-none d-md-block">
             <h2 class="deepshadow">Welcome to my</h2>
-            <h1 class="deepshadow">Angular GitHub Api</h1>
-            <h5>Portfolio Application</h5>
+            <h1 class="deepshadow">Angular 8 Web App</h1>
+            <h5>w/ GitHub Api Portfolio</h5>
           </div>
         </div>
         <div class="carousel-item bgImage2">
