--- a/Angular-GitHubApi-Portfolio/src/app/modules/calculator/pages/calculator/calculator.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/calculator/pages/calculator/calculator.component.html
@@ -1,3 +1,17 @@
-<p>calculator works!</p>
 
-<app-killowatt-calculator></app-killowatt-calculator>
+
+<main id="contact_us" class="fluid-container">
+    <section id="hero_slider" class="w-100">
+        <article>
+            <app-calculator-header></app-calculator-header>
+        </article>
+    </section>
+    <section id="rafael_intro" class="container">
+        <article class="col-12 pt-3">
+            <app-killowatt-calculator></app-killowatt-calculator>
+        </article>
+    </section>
+    <section id="services" class="container-fluid bg-dark">
+
+    </section>
+</main>
