Working on the Create, Read, Update and Delete components for the task manager

--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/update-task/update-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/update-task/update-task.component.html
@@ -1,1 +1,28 @@
-<p>update-task works!</p>
+<div class="pt-3" >
+    <div class="card card-body pt-3" *ngIf="task">
+        <form (ngSubmit)="saveEdit()">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="task_name">Task Name:</label>
+                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name"
+                [(ngModel)]="task.name">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="description">Description:</label>
+                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="task.description">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="timeToComplete">Time To Complete: </label>
+              <input type="text" class="form-control" id="timeToComplete" placeholder="Time To Complete" name="timeToComplete" [(ngModel)]="task.timeToComplete">
+            </div>
+            <div class="form-group">
+              <label for="necessaryItems">Necessary Items: </label>
+              <textarea type="text" class="form-control" id="necessaryItems" placeholder="Necessary Items" name="necessaryItems" [(ngModel)]="task.necessaryItems"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+  </div>
