--- a/Angular-GitHubApi-Portfolio/src/app/app.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ng2-slim-loading-bar color="blue"></ng2-slim-loading-bar>
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
