--- a/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
@@ -9,7 +9,9 @@
         <li class="nav-item active">
           <a class="nav-link" routerLink="home" routerLinkActive="active">Home <span class="sr-only" >(current)</span></a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" routerLink="task-manager" routerLinkActive="active">Angular 2 Task Manager</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="calculator" routerLinkActive="active">Angular 1 Calculator</a>
         </li>
