--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
@@ -1,1 +1,32 @@
-<p>create-task works!</p>
+<div class="col-12 pl-0 pt-3">
+    <a class="btn btn-success" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      Add a Task
+    </a>
+</div>
+  <div class="collapse pt-3" id="collapseExample">
+    <div class="card card-body pt-3">
+        <form (ngSubmit)="onSubmit()">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="task_name">Task Name:</label>
+                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name" [(ngModel)]="model.name">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="description">Description:</label>
+                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="model.description">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="timeToComplete">Time To Complete: </label>
+              <input type="text" class="form-control" id="timeToComplete" placeholder="Time To Complete" name="timeToComplete" [(ngModel)]="model.timeToComplete">
+            </div>
+            <div class="form-group">
+              <label for="necessaryItems">Necessary Items: </label>
+              <textarea type="text" class="form-control" id="necessaryItems" placeholder="Necessary Items" name="necessaryItems" [(ngModel)]="model.necessaryItems"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+  </div>
