--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
@@ -25,8 +25,31 @@
               <textarea type="text" class="form-control" id="necessaryItems" placeholder="Necessary Items" name="necessaryItems" [(ngModel)]="model.necessaryItems"></textarea>
             </div>
             <div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" (click)="addTask(task_name.value, description.value, timeToComplete.value, necessaryItems.value)" >Submit</button>
             </div>
         </form>
+        <!-- <form (ngSubmit)="onSubmit()">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="task_name">Task Name:</label>
+                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name" [(ngModel)]="model.name">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="description">Description:</label>
+                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="model.description">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="timeToComplete">Time To Complete: </label>
+              <input type="text" class="form-control" id="timeToComplete" placeholder="Time To Complete" name="timeToComplete" [(ngModel)]="model.timeToComplete">
+            </div>
+            <div class="form-group">
+              <label for="necessaryItems">Necessary Items: </label>
+              <textarea type="text" class="form-control" id="necessaryItems" placeholder="Necessary Items" name="necessaryItems" [(ngModel)]="model.necessaryItems"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form> -->
     </div>
   </div>
