--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/pages/task-manager/task-manager.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/pages/task-manager/task-manager.component.html
@@ -4,14 +4,19 @@
             <app-task-manager-header></app-task-manager-header>
         </article>
     </section>
+    <section id="taskManager_createTask" class="container border rounded bg-primary p-5">
+        <article class="col-12 pt-3">
+            <h2 class="display-5 text-white">Add a task now!</h2>
+            <app-create-task></app-create-task>
+        </article>
+    </section>
     <section id="taskManager_viewTask" class="container border rounded p-5">
         <article class="col-12 pt-3">
             <div class="row">
-
-                <div class="col-12">
+                <!-- <div class="col-12">
                   <h5>Add a task now!</h5>
-                    <p><button type="button" class="btn btn-primary" routerLink="/add" routerLinkActive="active">Add a Task</button></p>
-                </div>
+                    <p><button type="button" class="btn btn-primary" routerLink="task-manager/create" routerLinkActive="active">Add a Task</button></p>
+                </div> -->
                 <div class="col-12"><h5>Click on a task to get started!</h5></div>
               </div>
               
@@ -33,11 +38,6 @@
     <section id="taskManager_updateTask" class="container border rounded bg-primary p-5">
         <article class="col-12 pt-3">
             <app-update-task></app-update-task>
-        </article>
-    </section>
-    <section id="taskManager_createTask" class="container border rounded bg-success p-5">
-        <article class="col-12 pt-3">
-            <app-create-task></app-create-task>
         </article>
     </section>
     <section id="taskManager_deleteTask" class="container border rounded bg-danger p-5">
