--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
@@ -5,11 +5,16 @@
 </div>
   <div class="collapse pt-3" id="collapseExample">
     <div class="card card-body pt-3">
-        <form (ngSubmit)="onSubmit()">
+        <form (ngSubmit)="onSubmit()" [formGroup="angForm" novalidate>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="task_name">Task Name:</label>
-                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name" [(ngModel)]="model.name">
+                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name" formControl="task_name" #task_name>
+              </div>
+              <div *ngIf="angForm.controls['task_name'].invalid && (angForm.controls['task_name'].dirty || angForm.controls['task_name'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['task_name'].errors.required">
+                  Task Name is required.
+                </div>
               </div>
               <div class="form-group col-md-6">
                 <label for="description">Description:</label>
