Working NodeJS Server with Angular 8 Create operation
The tasks manager form creates a task in the MongoDb Server using express.

--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/create-task/create-task.component.html
@@ -5,11 +5,11 @@
 </div>
   <div class="collapse pt-3" id="collapseExample">
     <div class="card card-body pt-3">
-        <form (ngSubmit)="onSubmit()" [formGroup="angForm" novalidate>
+        <form [formGroup]="angForm" novalidate>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="task_name">Task Name:</label>
-                <input type="text" class="form-control" id="task_name" type="text" placeholder="name" name="name" formControl="task_name" #task_name>
+                <input type="text" class="form-control" formControlName="task_name" #task_name>
               </div>
               <div *ngIf="angForm.controls['task_name'].invalid && (angForm.controls['task_name'].dirty || angForm.controls['task_name'].touched)" class="alert alert-danger">
                 <div *ngIf="angForm.controls['task_name'].errors.required">
@@ -17,20 +17,35 @@
                 </div>
               </div>
               <div class="form-group col-md-6">
-                <label for="description">Description:</label>
-                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="model.description">
+                <label for="task_description">Description:</label>
+                <input type="text" class="form-control" formControlName="task_description" #task_description>
+              </div>
+            </div>
+            <div *ngIf="angForm.controls['task_description'].invalid && (angForm.controls['task_description'].dirty || angForm.controls['task_description'].touched)" class="alert alert-danger">
+              <div *ngIf="angForm.controls['task_description'].errors.required">
+                Description is required.
               </div>
             </div>
             <div class="form-group">
-              <label for="timeToComplete">Time To Complete: </label>
-              <input type="text" class="form-control" id="timeToComplete" placeholder="Time To Complete" name="timeToComplete" [(ngModel)]="model.timeToComplete">
+              <label for="task_timeToComplete">Time To Complete: </label>
+              <input type="text" class="form-control" formControlName="task_timeToComplete" #task_timeToComplete>
+            </div>
+            <div *ngIf="angForm.controls['task_timeToComplete'].invalid && (angForm.controls['task_timeToComplete'].dirty || angForm.controls['task_timeToComplete'].touched)" class="alert alert-danger">
+              <div *ngIf="angForm.controls['task_timeToComplete'].errors.required">
+                  Time to Complete is required.
+              </div>
             </div>
             <div class="form-group">
-              <label for="necessaryItems">Necessary Items: </label>
-              <textarea type="text" class="form-control" id="necessaryItems" placeholder="Necessary Items" name="necessaryItems" [(ngModel)]="model.necessaryItems"></textarea>
+              <label for="task_necessaryItems">Necessary Items: </label>
+              <textarea type="text" class="form-control" formControlName="task_necessaryItems" #task_necessaryItems></textarea>
             </div>
-            <div>
-                <button type="submit" class="btn btn-primary" (click)="addTask(task_name.value, description.value, timeToComplete.value, necessaryItems.value)" >Submit</button>
+            <div *ngIf="angForm.controls['task_necessaryItems'].invalid && (angForm.controls['task_necessaryItems'].dirty || angForm.controls['task_necessaryItems'].touched)" class="alert alert-danger">
+              <div *ngIf="angForm.controls['task_necessaryItems'].errors.required">
+                  Necessary Items is required.
+              </div>
+            </div>
+            <div class="form-group">
+                <button (click)="addTask(task_name.value, task_description.value, task_timeToComplete.value, task_necessaryItems.value)" class="btn btn-primary" [disabled]="angForm.pristine || angForm.invalid">Submit</button>
             </div>
         </form>
         <!-- <form (ngSubmit)="onSubmit()">
@@ -41,7 +56,7 @@
               </div>
               <div class="form-group col-md-6">
                 <label for="description">Description:</label>
-                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="model.description">
+                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="model.task_description">
               </div>
             </div>
             <div class="form-group">
