--- a/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/update-task/update-task.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/modules/task-manager/components/update-task/update-task.component.html
@@ -8,8 +8,8 @@
                 [(ngModel)]="task.name">
               </div>
               <div class="form-group col-md-6">
-                <label for="description">Description:</label>
-                <input type="text" class="form-control" id="description" placeholder="description" name="description" [(ngModel)]="task.description">
+                <label for="task_description">Description:</label>
+                <input type="text" class="form-control" id="task_description" placeholder="description" name="description" [(ngModel)]="task.task_description">
               </div>
             </div>
             <div class="form-group">
