--- a/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
+++ b/Angular-GitHubApi-Portfolio/src/app/core/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="home" routerLinkActive="active">Home <span class="sr-only" >(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="task-manager" routerLinkActive="active">Angular 2 Task Manager</a>
+          <a class="nav-link" routerLink="task" routerLinkActive="active">Angular 2 Task Manager</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="calculator" routerLinkActive="active">Angular 1 Calculator</a>
