--- a/src/app/modules/home/component/current-skillset/current-skillset.component.html
+++ b/src/app/modules/home/component/current-skillset/current-skillset.component.html
@@ -46,7 +46,7 @@
             </div> <!-- End Skill Bar -->
         
             <div class="skillbar clearfix " data-percent="83%">
-                <div class="skillbar-title" style="background: #27ae60;"><span>Apache Cordova</span></div>
+                <div class="skillbar-title" style="background: #27ae60;"><span>Ionic Cordova</span></div>
                 <div class="skillbar-bar" style="background: rgb(46, 204, 113); width: 83%;"></div>
                 <div class="skill-bar-percent">83%</div>
             </div> <!-- End Skill Bar -->
