--- a/src/app/modules/home/component/rafael-intro/rafael-intro.component.html
+++ b/src/app/modules/home/component/rafael-intro/rafael-intro.component.html
@@ -2,12 +2,12 @@
 <div class="jumbotron bg-white mb-5">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                     <div class="w-75 mx-auto m-2 text-center">
                         <img src="../../../../../assets/media/images/rafael_torres_pic.png" class="img-fluid rounded" alt="An image of me">    
                     </div>
             </div>
-            <div class="col-8">
+            <div class="col-12 col-md-8">
                     <h1 class="display-3" id="gitName">Rafael Torres</h1>
                     <h2 class="display-5 text-black" id="changerificwordspanid">Problem Solver</h2>
                     <p id="gitBio">Hard working Front End Web Developer with 5 years of experience coding and creating graphics for advertising and marketing purposes.</p>
