--- a/src/app/modules/home/component/home-hero-slider/home-hero-slider.component.html
+++ b/src/app/modules/home/component/home-hero-slider/home-hero-slider.component.html
@@ -9,20 +9,20 @@
         <div class="overlay">
         </div>
         <div class="carousel-item bgImage1 active">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-block d-md-block">
             <h2 class="deepshadow">Welcome to my</h2>
             <h1 class="deepshadow">Angular 8 Web App</h1>
             <h5>w/ GitHub Api Portfolio</h5>
           </div>
         </div>
         <div class="carousel-item bgImage2">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-block d-md-block">
             <h1>A little about me</h1>
             <p>I am a Full Stack Developer living in the Greater Los Angeles area and my top 5 skills are Angular 2-8, MongoDB, JavaScript, Java Spring and Bootstrap. I was born in Ventura, Ca and raised in Santa Paula. I am currently located in Lake of the Woods, Ca which is in the Los Padres National Forest.</p>
           </div>
         </div>
         <div class="carousel-item bgImage3">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-block d-md-block">
             <h5>Feel free to contact me</h5>
             <p>Please fill out the form or email me directly, my gmail is rtj113 at gmail dot com.</p>
           </div>
